# extalloc

./: .clang-tidy  .gitignore  .lgtm.yml  .travis.xml  CMakeLists.txt  LICENSE.txt  README.md  allocator.cpp  allocator.hpp  main.cpp  mmap_stress.cpp  optional.hpp  test_optional.cpp  unit-tests.cpp
